Closed Bug 376093 Opened 19 years ago Closed 19 years ago

When writing in Korean, one has to press enter two times to break the line

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hwasungmars, Assigned: masayuki)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.2pre) Gecko/20070223 Camino/1.1b Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.8.1.2pre) Gecko/20070223 Camino/1.1b When using Korean with Camino, I have to press enter twice to break the line. This does not happen in Safari. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Does it happen in Firefox?
No, in Firefox, it works fine. Strangely it only occurs in Camino.
Does this bug also happen in a trunk Firefox (Minefield)? ftp://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-trunk/firefox-3.0a4pre.en-US.mac.dmg It sounds very much like it could be some latent Cocoa Widget IME bug.
Yes, Minefield also has the same problem. (I like how you guys named it!) So in summary, this bug effects: 1. All versions of Caminos out there 2. Firefox (Minefield) This bug does not effect: 1. Firefox 2.0.0.3 I hope you guys can fix it. It is the only reason I have to use Safari (when writing emails)!
Assignee: nobody → joshmoz
Status: UNCONFIRMED → NEW
Component: General → Widget: Cocoa
Ever confirmed: true
Product: Camino → Core
QA Contact: general → cocoa
Summary: When writing in Korean, one should press enter two times to break the line → When writing in Korean, one has to press enter two times to break the line
Version: unspecified → Trunk
Flags: blocking1.9+
Attached patch Patch rv1.0Splinter Review
The Korean IME sends the insert new line command after committed the composing string. We should care it.
Assignee: joshmoz → masayuki
Status: NEW → ASSIGNED
Attachment #262127 - Flags: review?(joshmoz)
Attachment #262127 - Flags: superreview?(pavlov)
Attachment #262127 - Flags: review?(joshmoz)
Attachment #262127 - Flags: review+
Comment on attachment 262127 [details] [diff] [review] Patch rv1.0 are there other selectors we should also be handling here?
To clarify Stuart's question, do we need to be doing something special for things like "insertLineBreak:" and "insertTab:"?
Probably, we also need to do them. But I don't know when such cases are occurred.
Comment on attachment 262127 [details] [diff] [review] Patch rv1.0 please file another bug on supporting those 2
Attachment #262127 - Flags: superreview?(pavlov) → superreview+
checked-in. I'll file a new bug for comment 9.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
This bug seems not to be resolved for Camino version 1.5. Could you look into this?
Resolution: FIXED → INCOMPLETE
This is fixed on trunk; Camino 1.5 comes from the branch, on which this fix was not landed. This will be fixed in Camino 2.0 and beyond. Is there any way to fix this on branch? I'm re-marking this FIXED pending an answer.
Resolution: INCOMPLETE → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: