Bug 376093 When writing in Korean, one has to press enter two times to break the line r=josh, sr=stuart